--- a/UIKit_DZ/UIKit_DZ/Info.plist
+++ b/UIKit_DZ/UIKit_DZ/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Verdana-BoldItalic.ttf</string>
 		<string>Verdana-Bold.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
