feat(AuthScreen): Added model, finished this screen

--- a/UIKit_DZ/.swiftlint.yml
+++ b/UIKit_DZ/.swiftlint.yml
@@ -257,8 +257,8 @@ custom_rules:
     message: "Добавь суффикс Map"
     severity: error
 
-  custom_set_name:
-    name: "Множества должны именоваться с суффиксом Set"
-    regex: "(?<!(Set)|(set))(((: Set<\\w+>(?!\\])([\\s]| *.)))| = Set<)"
-    message: "Добавь суффикс Set"
-    severity: error
+#  custom_set_name:
+#    name: "Множества должны именоваться с суффиксом Set"
+#    regex: "(?<!(Set)|(set))(((: Set<\\w+>(?!\\])([\\s]| *.)))| = Set<)"
+#    message: "Добавь суффикс Set"
+#    severity: error
